# bevy_orchestral

./: Cargo.toml  Makefile  Trunk.toml  bevy_orchestral-21494e9e5d8db13a.js  bevy_orchestral-6445aa6ac52194f3.js  bevy_orchestral-a5e4ee48b106fc60.js  bevy_orchestral-c015bfba44da7e8e.js  ideas.md  index.html
.github/workflows/: deploy-wasm.yml
assets/sprites/: maestro.aseprite  raccoon.aseprite  skunk.aseprite  tuba.aseprite  violin.aseprite
src/: aoe.rs  bounce.rs  bullet.rs  enemy.rs  follower.rs  health.rs  instrument.rs  laser.rs  main.rs  map.rs  metronome.rs  nearest_enemy.rs  nearest_entity.rs  note_highway.rs  slide.rs  window_size.rs
