[package]
name = "bevy_orchestral"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", features = ["dynamic_linking"] }
bevy_aseprite_ultra = "0.6.1"
bevy_ecs_tilemap = "0.16.0"
bevy_rapier2d = {version ="0.31.0", features = ["debug-render-2d"]}
fraction = "0.15.3"
getrandom = {version = "0.3.3", features = ["wasm_js"]}
gilrs = "0.11.0"
rand = "0.9.2"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

